Wed Mar 18 20:40:43 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-stock.c (NOT_ALWAYS_SHADE): Renamed to fix typo.
	(_default_entries_data): Added `label' field.
	(entries_data): Added label info to each element.
	(stock_pixmaps): Copy label into hash entry.
	(gnome_stock_menu_item): Fail if text is NULL.
	(gnome_stock_button): Look up label in entry.

	* gnome-stock.h: Added `label' field to each GnomeStockPixmapEntry
	structure.

1998-03-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-file-entry.h: New files gnome-file-entry.[ch].  This is a
	combo box widget with an extra "Browse" button to enter file
	names.  All places in Gnome where an entry widget is being used to
	get a filename should use the GnomeFileEntry widget instead.

	* libgnomeui.h: Added gnome-file-entry.h to the includes.

	* Makefile.am: Added gnome-file-entry.[ch] to the file lists.

Tue Mar 17 22:45:47 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock/stock_demo: added "Save As" icon.

Tue Mar 17 22:28:47 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.h: added dummy variable to include N_("blah")s for
	i18n.

	* gnome-stock.c (gnome_stock_button): use dgettext, not gettext.

1998-03-17  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-app-helper.c (gnome_app_do_menu_creation): The activate
	signal should not be connected to subtree items --- you don't want
	to call a subtree structure when the user clicks on a submenu, right?

1998-03-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-app-helper.h: Removed the explicit values from the type
	enum and removed the GNOME_APP_UI_LAST value (never used).
	Added #ifndef GNOME_APP_HELPER_H... stuff.

1998-03-16  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock/stock_demo: Added undo stock icon. Added some more
	stock icons to the list of converted menu icons.

	* gnome-stock-xpm-h: removed -- fully switched to imlib rgbs.

1998-03-16  Eckehard Berns  <eb@berns.prima.de>
